--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "HTML",
     "Webapp"
   ],
-  "bin": {
-    "create-js-app": "bin/index.js"
-  },
+  "bin": "bin/index.js",
   "author": "Martin Boudreau",
   "license": "ISC",
   "bugs": {
